# polars-config-meta

./: .pre-commit-config.yaml  Justfile  README.md  pyproject.toml  ruff.toml
.github/workflows/: CI.yml
.just/: py-release.just
src/polars_config_meta/: __init__.py  diagnostics.py
tests/: discovery_test.py  metadata_core_test.py  metadata_preservation_test.py
