[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pdbpp>=0.12.1"]
full = ["polars[pandas]>=1.36.0", "pyarrow>=22.0.0"]
test = ["pytest>=9.0.0"]

[project]
authors = [{ email = "louismmx@gmail.com", name = "Louis Maddox" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python",
]
dependencies = []
description = "A Polars plugin for persistent DataFrame-level metadata"
name = "polars-config-meta"
readme = "README.md"
requires-python = ">=3.10"
version = "0.3.3"

[project.optional-dependencies]
polars = ["polars>=1.30"]
lts-cpu = ["polars[rtcompat]>=1.30"]
pyarrow = ["pyarrow>=22.0.0"]

[project.urls]
Homepage = "https://github.com/lmmx/polars-config-meta"
Repository = "https://github.com/lmmx/polars-config-meta.git"

[tool.uv]
default-groups = ["dev", "full", "test"]
